crates/sources/src/scenarios/snapshots/sources__scenarios__test__endpoints_captures_materializations-3.snap
---
source: crates/sources/src/scenarios/mod.rs
expression: tables
---
DraftCatalog {
    captures: [
        DraftCapture {
            capture: acmeCo/source-acme,
            scope: test://example/catalog.yaml#/captures/acmeCo~1source-acme,
            expect_pub_id: NULL,
            data_plane_id: "0000000000000000",
            model: {
              "endpoint": {
                "python": {
                  "files": [
                    "pyproject.toml",
                    "source_acme/__init__.py",
                    "source_acme/__main__.py"
                  ],
                  "config": "source-acme.config.yaml",
                  "spec": {
                    "configSchema": "source-acme.config.schema.yaml",
                    "resourceConfigSchema": "source-acme.resource.schema.yaml",
                    "oauth2": {
                      "provider": "acme",
                      "authUrlTemplate": "https://acme.example/authorize?client_id={{{ client_id }}}",
                      "accessTokenUrlTemplate": "https://acme.example/token",
                      "accessTokenResponseMap": {
                        "access_token": "/access_token"
                      }
                    }
                  }
                }
              },
              "secrets": {
                "acmeCo/source-acme/client-secret": "/credentials/client_secret"
              },
              "bindings": [
                {
                  "resource": {"name":"widgets"},
                  "target": "a/collection"
                }
              ]
            },
            is_touch: 0,
        },
        DraftCapture {
            capture: capture/config-missing,
            scope: test://example/catalog.yaml#/captures/capture~1config-missing,
            expect_pub_id: NULL,
            data_plane_id: "0000000000000000",
            model: {
              "endpoint": {
                "connector": {
                  "image": "another/image",
                  "config": "test://example/config/not/found.yaml"
                }
              },
              "bindings": [
                {
                  "resource": "test://example/resource/not/found.yaml",
                  "target": "some/collection",
                  "backfill": 2
                }
              ]
            },
            is_touch: 0,
        },
        DraftCapture {
            capture: capture/config-raw,
            scope: test://example/catalog.yaml#/captures/capture~1config-raw,
            expect_pub_id: NULL,
            data_plane_id: "0000000000000000",
            model: {
              "endpoint": {
                "connector": {
                  "image": "another/image",
                  "config": "config-raw.config.yaml"
                }
              },
              "bindings": []
            },
            is_touch: 0,
        },
        DraftCapture {
            capture: capture/local,
            scope: test://example/catalog.yaml#/captures/capture~1local,
            expect_pub_id: NULL,
            data_plane_id: "0000000000000000",
            model: {
              "endpoint": {
                "local": {
                  "command": [
                    "do-the-thing",
                    "--arg=one",
                    "--arg",
                    "two"
                  ],
                  "config": {"some":"local config"}
                }
              },
              "bindings": []
            },
            is_touch: 0,
        },
        DraftCapture {
            capture: capture/second,
            scope: test://example/catalog.yaml#/captures/capture~1second,
            expect_pub_id: "0011223344556677",
            data_plane_id: "0000000000000000",
            model: {
              "endpoint": {
                "connector": {
                  "image": "another/image",
                  "config": "second.config.yaml"
                }
              },
              "bindings": [
                {
                  "resource": "second.resource.0.config.yaml",
                  "target": "third/collection"
                }
              ],
              "interval": "3m",
              "shards": {
                "maxTxnDuration": "30s",
                "logLevel": "debug"
              }
            },
            is_touch: 0,
        },
        DraftCapture {
            capture: first/capture,
            scope: test://example/catalog.yaml#/captures/first~1capture,
            expect_pub_id: NULL,
            data_plane_id: "0000000000000000",
            model: {
              "endpoint": {
                "connector": {
                  "image": "an/image",
                  "config": "capture.config.yaml"
                }
              },
              "bindings": [
                {
                  "resource": {"stream":"contents"},
                  "target": "a/collection"
                },
                {
                  "resource": {"extra":"stuff"},
                  "target": "other/collection",
                  "backfill": 1
                }
              ]
            },
            is_touch: 0,
        },
    ],
    materializations: [
        DraftMaterialization {
            materialization: a/materialization,
            scope: test://example/catalog.yaml#/materializations/a~1materialization,
            expect_pub_id: "0011223344556677",
            data_plane_id: "0000000000000000",
            model: {
              "source": "a/capture",
              "endpoint": {
                "connector": {
                  "image": "materialization/image",
                  "config": {"its":"config"}
                }
              },
              "bindings": [
                {
                  "resource": {"table":"table_one"},
                  "source": "source/collection",
                  "fields": {
                    "recommended": true
                  }
                },
                {
                  "resource": {"table":"table_two"},
                  "source": {
                    "name": "other/source/collection",
                    "partitions": {
                      "include": {
                        "a_field": [
                          "some-val"
                        ]
                      },
                      "exclude": {
                        "other": [
                          42
                        ]
                      }
                    }
                  },
                  "fields": {
                    "require": {
                      "add": {}
                    },
                    "exclude": [
                      "del"
                    ],
                    "recommended": true
                  }
                }
              ]
            },
            is_touch: 0,
        },
        DraftMaterialization {
            materialization: materialization/local,
            scope: test://example/catalog.yaml#/materializations/materialization~1local,
            expect_pub_id: NULL,
            data_plane_id: "0000000000000000",
            model: {
              "endpoint": {
                "local": {
                  "command": [
                    "do-the-thing",
                    "--arg=one",
                    "--arg",
                    "two"
                  ],
                  "config": {"some":"local config"}
                }
              },
              "bindings": [
                {
                  "resource": {"table":"table_three"},
                  "source": "final/source/collection",
                  "fields": {
                    "recommended": true
                  }
                }
              ],
              "shards": {
                "ringBufferSize": 12345
              }
            },
            is_touch: 0,
        },
        DraftMaterialization {
            materialization: materialization/missing-config,
            scope: test://example/catalog.yaml#/materializations/materialization~1missing-config,
            expect_pub_id: NULL,
            data_plane_id: "0000000000000000",
            model: {
              "endpoint": {
                "connector": {
                  "image": "materialization/image",
                  "config": "test://example/config/not/found.yaml"
                }
              },
              "bindings": [
                {
                  "resource": "test://example/referenced/not/found.yaml",
                  "source": "other/source/collection",
                  "fields": {
                    "recommended": true
                  }
                }
              ]
            },
            is_touch: 0,
        },
        DraftMaterialization {
            materialization: materialization/with-config,
            scope: test://example/catalog.yaml#/materializations/materialization~1with-config,
            expect_pub_id: NULL,
            data_plane_id: "0000000000000000",
            model: {
              "endpoint": {
                "connector": {
                  "image": "materialization/another:image",
                  "config": "with-config.config.yaml"
                }
              },
              "bindings": [
                {
                  "resource": "with-config.resource.0.config.yaml",
                  "source": "some/source/collection",
                  "fields": {
                    "recommended": true
                  },
                  "backfill": 3
                }
              ]
            },
            is_touch: 0,
        },
        DraftMaterialization {
            materialization: materialization/with-config-fragment,
            scope: test://example/catalog.yaml#/materializations/materialization~1with-config-fragment,
            expect_pub_id: NULL,
            data_plane_id: "0000000000000000",
            model: {
              "endpoint": {
                "connector": {
                  "image": "materialization/another:image",
                  "config": "test://example/referenced/config.yaml#/bad/fragment"
                }
              },
              "bindings": []
            },
            is_touch: 0,
        },
    ],
    imports: [
        Import {
            scope: test://example/catalog.yaml#/captures/acmeCo~1source-acme/endpoint/python/config,
            to_resource: test://example/source-acme.config.yaml,
        },
        Import {
            scope: test://example/catalog.yaml#/captures/acmeCo~1source-acme/endpoint/python/files/0,
            to_resource: test://example/pyproject.toml,
        },
        Import {
            scope: test://example/catalog.yaml#/captures/acmeCo~1source-acme/endpoint/python/files/1,
            to_resource: test://example/source_acme/__init__.py,
        },
        Import {
            scope: test://example/catalog.yaml#/captures/acmeCo~1source-acme/endpoint/python/files/2,
            to_resource: test://example/source_acme/__main__.py,
        },
        Import {
            scope: test://example/catalog.yaml#/captures/acmeCo~1source-acme/endpoint/python/spec/configSchema,
            to_resource: test://example/source-acme.config.schema.yaml,
        },
        Import {
            scope: test://example/catalog.yaml#/captures/acmeCo~1source-acme/endpoint/python/spec/resourceConfigSchema,
            to_resource: test://example/source-acme.resource.schema.yaml,
        },
        Import {
            scope: test://example/catalog.yaml#/captures/capture~1config-raw/endpoint/connector/config,
            to_resource: test://example/config-raw.config.yaml,
        },
        Import {
            scope: test://example/catalog.yaml#/captures/capture~1second/bindings/0/resource,
            to_resource: test://example/second.resource.0.config.yaml,
        },
        Import {
            scope: test://example/catalog.yaml#/captures/capture~1second/endpoint/connector/config,
            to_resource: test://example/second.config.yaml,
        },
        Import {
            scope: test://example/catalog.yaml#/captures/first~1capture/endpoint/connector/config,
            to_resource: test://example/capture.config.yaml,
        },
        Import {
            scope: test://example/catalog.yaml#/materializations/materialization~1with-config/bindings/0/resource,
            to_resource: test://example/with-config.resource.0.config.yaml,
        },
        Import {
            scope: test://example/catalog.yaml#/materializations/materialization~1with-config/endpoint/connector/config,
            to_resource: test://example/with-config.config.yaml,
        },
    ],
    resources: [
        Resource {
            resource: test://example/capture.config.yaml,
            content_type: "CONFIG",
            content: ".. binary ..",
            content_dom: {"bucket":"foobar","prefix":"path/prefix"},
        },
        Resource {
            resource: test://example/catalog.yaml,
            content_type: "CATALOG",
            content: ".. binary ..",
            content_dom: {"captures":{"acmeCo/source-acme":{"endpoint":{"python":{"files":["pyproject.toml","source_acme/__init__.py","source_acme/__main__.py"],"config":"source-acme.config.yaml","spec":{"configSchema":"source-acme.config.schema.yaml","resourceConfigSchema":"source-acme.resource.schema.yaml","oauth2":{"provider":"acme","authUrlTemplate":"https://acme.example/authorize?client_id={{{ client_id }}}","accessTokenUrlTemplate":"https://acme.example/token","accessTokenResponseMap":{"access_token":"/access_token"}}}}},"secrets":{"acmeCo/source-acme/client-secret":"/credentials/client_secret"},"bindings":[{"resource":{"name":"widgets"},"target":"a/collection"}]},"capture/config-missing":{"endpoint":{"connector":{"image":"another/image","config":"test://example/config/not/found.yaml"}},"bindings":[{"resource":"test://example/resource/not/found.yaml","target":"some/collection","backfill":2}]},"capture/config-raw":{"endpoint":{"connector":{"image":"another/image","config":"config-raw.config.yaml"}},"bindings":[]},"capture/local":{"endpoint":{"local":{"command":["do-the-thing","--arg=one","--arg","two"],"config":{"some":"local config"}}},"bindings":[]},"capture/second":{"endpoint":{"connector":{"image":"another/image","config":"second.config.yaml"}},"bindings":[{"resource":"second.resource.0.config.yaml","target":"third/collection"}],"interval":"3m","shards":{"maxTxnDuration":"30s","logLevel":"debug"},"expectPubId":"0011223344556677"},"first/capture":{"endpoint":{"connector":{"image":"an/image","config":"capture.config.yaml"}},"bindings":[{"resource":{"stream":"contents"},"target":"a/collection"},{"resource":{"extra":"stuff"},"target":"other/collection","backfill":1}]}},"materializations":{"a/materialization":{"source":"a/capture","endpoint":{"connector":{"image":"materialization/image","config":{"its":"config"}}},"bindings":[{"resource":{"table":"table_one"},"source":"source/collection","fields":{"recommended":true}},{"resource":{"table":"table_two"},"source":{"name":"other/source/collection","partitions":{"include":{"a_field":["some-val"]},"exclude":{"other":[42]}}},"fields":{"require":{"add":{}},"exclude":["del"],"recommended":true}}],"expectPubId":"0011223344556677"},"materialization/local":{"endpoint":{"local":{"command":["do-the-thing","--arg=one","--arg","two"],"config":{"some":"local config"}}},"bindings":[{"resource":{"table":"table_three"},"source":"final/source/collection","fields":{"recommended":true}}],"shards":{"ringBufferSize":12345}},"materialization/missing-config":{"endpoint":{"connector":{"image":"materialization/image","config":"test://example/config/not/found.yaml"}},"bindings":[{"resource":"test://example/referenced/not/found.yaml","source":"other/source/collection","fields":{"recommended":true}}]},"materialization/with-config":{"endpoint":{"connector":{"image":"materialization/another:image","config":"with-config.config.yaml"}},"bindings":[{"resource":"with-config.resource.0.config.yaml","source":"some/source/collection","fields":{"recommended":true},"backfill":3}]},"materialization/with-config-fragment":{"endpoint":{"connector":{"image":"materialization/another:image","config":"test://example/referenced/config.yaml#/bad/fragment"}},"bindings":[]}}},
        },
        Resource {
            resource: test://example/config-raw.config.yaml,
            content_type: "CONFIG",
            content: ".. binary ..",
            content_dom: "fn main() {\n  do_the_thing();\n  do_another_really_long_thing_that_does_stuff_boy_this_is_running_on_huh()?;\n}\n",
        },
        Resource {
            resource: test://example/pyproject.toml,
            content_type: "TEXT",
            content: ".. binary ..",
            content_dom: "[project]\nname = \"source-acme\"\ndependencies = [\"estuary-cdk\"]\n",
        },
        Resource {
            resource: test://example/second.config.yaml,
            content_type: "CONFIG",
            content: ".. binary ..",
            content_dom: {"referenced":"config that's fairly long and does not inline"},
        },
        Resource {
            resource: test://example/second.resource.0.config.yaml,
            content_type: "CONFIG",
            content: ".. binary ..",
            content_dom: {"referenced":"resource that's fairly long and does not inline"},
        },
        Resource {
            resource: test://example/source-acme.config.schema.yaml,
            content_type: "JSON_SCHEMA",
            content: ".. binary ..",
            content_dom: {"$defs":{"__flowInline1":{"$id":"test://example/credentials.schema.yaml","properties":{"client_id":{"type":"string"},"client_secret":{"secret":true,"type":"string"}},"type":"object"}},"$id":"test://example/source-acme.config.schema.yaml","properties":{"credentials":{"$ref":"credentials.schema.yaml"}},"required":["credentials"],"type":"object"},
        },
        Resource {
            resource: test://example/source-acme.config.yaml,
            content_type: "CONFIG",
            content: ".. binary ..",
            content_dom: {"credentials":{"client_id":"a-client-id"}},
        },
        Resource {
            resource: test://example/source-acme.resource.schema.yaml,
            content_type: "JSON_SCHEMA",
            content: ".. binary ..",
            content_dom: {"$id":"test://example/catalog.yaml?ptr=/captures/acmeCo~1source-acme/endpoint/python/spec/resourceConfigSchema","properties":{"name":{"type":"string","x-collection-name":true}},"required":["name"],"type":"object"},
        },
        Resource {
            resource: test://example/source_acme/__init__.py,
            content_type: "TEXT",
            content: ".. binary ..",
            content_dom: "from estuary_cdk.capture import BaseCaptureConnector\n",
        },
        Resource {
            resource: test://example/source_acme/__main__.py,
            content_type: "TEXT",
            content: ".. binary ..",
            content_dom: "import asyncio\nimport source_acme\n\nasyncio.run(source_acme.Connector().serve())\n",
        },
        Resource {
            resource: test://example/with-config.config.yaml,
            content_type: "CONFIG",
            content: ".. binary ..",
            content_dom: {"referenced":"config that's fairly long and does not inline"},
        },
        Resource {
            resource: test://example/with-config.resource.0.config.yaml,
            content_type: "CONFIG",
            content: ".. binary ..",
            content_dom: {"referenced":"resource that's fairly long and does not inline"},
        },
    ],
}
